// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover adds arrow class when prop is set 1`] = `
<Popover
  content="Popover Content"
  gapSize={5}
  position="auto"
  trigger={
    <span>
      Trigger Content
    </span>
  }
  visible={true}
  withArrow={true}
>
  <span
    className="reactist popover__wrapper"
  >
    <span>
      Trigger Content
    </span>
    <span
      className="reactist popover visible arrow_bottom"
    >
      <span
        className="reactist popover__content"
      >
        Popover Content
      </span>
    </span>
  </span>
</Popover>
`;

exports[`Popover renders without crashing 1`] = `
<Popover
  content="Popover Content"
  gapSize={5}
  position="auto"
  trigger={
    <span>
      Trigger Content
    </span>
  }
  visible={true}
>
  <span
    className="reactist popover__wrapper"
  >
    <span>
      Trigger Content
    </span>
    <span
      className="reactist popover visible"
    >
      <span
        className="reactist popover__content"
      >
        Popover Content
      </span>
    </span>
  </span>
</Popover>
`;
